--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <html>
 
-    <body background= "fields.jpg">
-  
-		<center><a href="page2.html"><img width= "550" src="newport.jpg"></a></center>
+    <body background= "wallp.jpg">
+ 
+  <center><img src="ART.jpg" usemap="#dollhouse"></center>
+
+<center><map name="dollhouse">
+  <area shape="rect" coords="464, 613, 680, 770" href="page2.html">
+  <area shape="rect" coords="692, 579, 792, 780" href="page3.html">
+  <area shape="rect" coords="800, 612, 1045, 779" href="page4.html">
+  <area shape="rect" coords="447, 779, 571, 996" href="page5.html">
+  <area shape="rect" coords="446, 994, 570, 1211" href="page6.html">
+  <area shape="rect" coords="573, 787, 790, 996" href="page7.html">
+  <area shape="rect" coords="789, 784, 1043, 996" href="page8.html">
+  <area shape="rect" coords="575, 998, 790, 1205" href="page9.html">
+  <area shape="rect" coords="794, 1003, 1043, 1205" href="page10.html">
+</map></center>
  
 </body>
 
