--- a/index.html
+++ b/index.html
@@ -2,18 +2,18 @@
 
     <body background= "wallp.jpg">
  
-  <center><img src="ART.jpg" usemap="#dollhouse"></center>
+  <center><img src="house.pixel.jpg" usemap="#dollhouse"></center>
 
 <center><map name="dollhouse">
-  <area shape="rect" coords="464, 613, 680, 770" href="page2.html">
-  <area shape="rect" coords="692, 579, 792, 780" href="page3.html">
-  <area shape="rect" coords="800, 612, 1045, 779" href="page4.html">
-  <area shape="rect" coords="447, 779, 571, 996" href="page5.html">
-  <area shape="rect" coords="446, 994, 570, 1211" href="page6.html">
-  <area shape="rect" coords="573, 787, 790, 996" href="page7.html">
-  <area shape="rect" coords="789, 784, 1043, 996" href="page8.html">
-  <area shape="rect" coords="575, 998, 790, 1205" href="page9.html">
-  <area shape="rect" coords="794, 1003, 1043, 1205" href="page10.html">
+  <area shape="rect" coords="190, 246, 271, 311" href="page2.html">
+  <area shape="rect" coords="274, 230, 315, 312" href="page3.html">
+  <area shape="rect" coords="319, 244, 415, 310" href="page4.html">
+  <area shape="rect" coords="178, 314, 226, 481" href="page5.html">
+  <area shape="rect" coords="176, 401, 226, 481" href="page6.html">
+  <area shape="rect" coords="228, 314, 315, 395" href="page7.html">
+  <area shape="rect" coords="315, 316, 415, 395" href="page8.html">
+  <area shape="rect" coords="229, 399, 314, 481" href="page9.html">
+  <area shape="rect" coords="317, 401, 415, 481" href="page10.html">
 </map></center>
  
 </body>
